Remove unnecessary use of commons-io